--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -52,6 +52,8 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: NPM
+        run: npm -D postcss postcss-cli autoprefixer
       - name: Cache Restore
         id: cache-restore
         uses: actions/cache/restore@v4
