--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
-baseURL: https://example.docsy.dev
-title: Goldydocs
+baseURL: https://pjmark.github.io/niftyDOX/
+title: AmyPET
 
 # cSpell:ignore goldmark github hugo readingtime docsy subdir lastmod pygments linenos catmullrom norsk gu
 
@@ -104,10 +104,10 @@ params:
   url_latest_version: https://example.com
 
   # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-  github_repo: https://github.com/google/docsy-example
+  github_repo: https://github.com/pjmark/niftyDOX
 
   # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-  github_project_repo: https://github.com/google/docsy
+  github_project_repo: https://github.com/pjmark/niftyDOX
 
   # Specify a value here if your content directory is not in your repo's root directory
   # github_subdir: ""
@@ -126,8 +126,8 @@ params:
   prism_syntax_highlighting: false
 
   copyright:
-    authors: Docsy Authors | [CC BY 4.0](https://creativecommons.org/licenses/by/4.0) |
-    from_year: 2018
+    authors: PJ Markiewicz | [CC BY 4.0](https://creativecommons.org/licenses/by/4.0) |
+    from_year: 2025
 
   # User interface configuration
   ui:
