--- a/hugo.yaml
+++ b/hugo.yaml
@@ -46,7 +46,7 @@ imaging:
 languages:
   en:
     languageName: English
-    title: Goldydocs
+    title: AmyPET
     params:
       description: A Docsy example site
 
@@ -126,7 +126,7 @@ params:
   prism_syntax_highlighting: false
 
   copyright:
-    authors: PJ Markiewicz | [CC BY 4.0](https://creativecommons.org/licenses/by/4.0) |
+    authors: PJ | [CC BY 4.0](https://creativecommons.org/licenses/by/4.0) |
     from_year: 2025
 
   # User interface configuration
@@ -147,7 +147,7 @@ params:
     # If you want this feature, but occasionally need to remove the "Feedback" section from a single page,
     # add "hide_feedback: true" to the page's front matter.
     feedback:
-      enable: true
+      enable: false
       # The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
       'yes': >-
         Glad to hear it! Please <a href="https://github.com/USERNAME/REPOSITORY/issues/new">tell us how we can improve</a>.
@@ -163,32 +163,18 @@ params:
   links:
     # End user relevant links. These will show up on left side of footer and in the community page if you have one.
     user:
-      - name: User mailing list
-        url: https://example.org/mail
+      - name: GitHub
+        url: https://github.com/AMYPAD/AmyPET
         icon: fa fa-envelope
-        desc: Discussion and help from your fellow users
-      - name: Twitter
-        url: https://example.org/twitter
-        icon: fab fa-twitter
-        desc: Follow us on Twitter to get the latest news!
-      - name: Stack Overflow
-        url: https://example.org/stack
-        icon: fab fa-stack-overflow
-        desc: Practical questions and curated answers
+        desc: Discussion and help from fellow users
+
     # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
     developer:
       - name: GitHub
         url: https://github.com/google/docsy
         icon: fab fa-github
         desc: Development takes place here!
-      - name: Slack
-        url: https://example.org/slack
-        icon: fab fa-slack
-        desc: Chat with other project developers
-      - name: Developer mailing list
-        url: https://example.org/mail
-        icon: fa fa-envelope
-        desc: Discuss development issues around the project
+
 
 module:
   # Uncomment the next line to build and serve using local docsy clone declared in the named Hugo workspace:
